Issues:  #123 Moved the green/red dot to be aligned in the middle with the export button Hours: Very Negligible

--- a/src/app/components/app.scss
+++ b/src/app/components/app.scss
@@ -115,6 +115,7 @@ div.trans-sc{
   height: 6px;
   margin-left: 4px;
   width: 6px;
+  margin-bottom: 5px;
 }
 
 .red{
